# psiq-arithmetic

./: .gitignore  .pre-commit-config.yaml  README.md  Team Charter.docx  Weekly Report 1.docx  add_consistency.py  add_results.py  ct_qubrick.py  pyproject.toml  qbk_ttk.py  test_ct_qubrick.py  test_wang_rca.py  test_wangrca_qubrick.py  wangrca_qubrick.py
.github/workflows/: ci.yml  tests.yml
benchmarks/: benchmark_check.py  benchmark_ct.py  benchmark_gayathri.py  benchmark_tr.py  benchmark_ttk.py  benchmark_wangrca.py  circuit_diagram_ct.py  circuit_diagram_gayathri.py  circuit_diagram_tr.py  create_joint_plots.py
docs/: Notes.pages  PsiQuantum Project -- 2026 ENGINE Showcase Poster.key  README.md  Team Charter.docx  Weekly Report 1.docx  Weekly Report 4.docx  Weekly Report 6.docx
src/: qbk_ct.py  qbk_gayathri.py  qbk_jhha.py  qbk_tr.py  qbk_ttk.py  qbk_ttkmult.py  qbk_wangrca.py
src/ee522psiquantum.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: add_consistency.py  add_results.py  mult_results.py  test_ct_qubrick.py  test_gayathri_qubrick.py  test_jhha_qubrick.py  test_tr_qubrick.py  test_ttk_qubrick.py  test_wangrca_qubrick.py
